--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding.git
+      path: plugins/window_size
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
