--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,15 @@ dependencies:
       url: https://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
   excel: ^2.1.0
+  country_flags: ^2.2.0
+  syncfusion_flutter_maps: ^24.1.47
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   provider: ^6.1.2
   fl_chart: ^0.63.0
+  decimal: ^2.2.0
 
 dev_dependencies:
   flutter_test:
