--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,10 @@ dependencies:
       path: plugins/window_size
   excel: ^2.1.0
   country_flags: ^2.2.0
-  syncfusion_flutter_maps: ^24.1.47
+  syncfusion_flutter_maps: ^22.1.34
+  countries_world_map: ^1.1.1
   path: ^1.9.0
+  geocoding: ^2.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -101,3 +103,5 @@ flutter:
 
   assets:
     - assets/images/logo_amur_white_full.png
+    - assets/world_map.json
+
