지도 마킹 동작 추가 및 위치 확인 기타 UI 수정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,4 +104,6 @@ flutter:
   assets:
     - assets/images/logo_amur_white_full.png
     - assets/world_map.json
+    - assets/world_map_iso.json
+    - assets/country_coordinates.json
 
