--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   provider: ^6.1.2
   fl_chart: ^0.63.0
   decimal: ^2.2.0
+  flutter_layout_grid: ^2.0.7
 
 dev_dependencies:
   flutter_test:
