--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   countries_world_map: ^1.1.1
   path: ^1.9.0
   geocoding: ^2.1.1
+  window_manager: ^0.3.8
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
