ChartWidget 제거 및 이미지 추가 표 디테일 수정 기술 진단 Rader 차트 SC 내역 수정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,6 +109,7 @@ flutter:
     - assets/world_map.json
     - assets/world_map_iso.json
     - assets/country_coordinates.json
+    - assets/images/image1.jpg
 
   fonts:
     - family: Paperlogy-1
