--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   geocoding: ^2.1.1
   window_manager: ^0.3.8
   google_fonts: ^6.1.0
+  path_provider: ^2.0.15
+  image: ^4.0.15
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
